--- a/src/leetcode/markdown/179. Largest Number.md
+++ b/src/leetcode/markdown/179. Largest Number.md
@@ -18,6 +18,9 @@
 
 > 思路2：
 > 发现将两个数补齐为相同位数后就可以直接比较大小(后序证明不可行)
+
+> 思路3：
+> 将两个字符串拼接起来，就可以直接比较那个大，然后定义comparable
 ```
     public String largestNumber(int[] nums) {
        List<String> list = new ArrayList<>();
@@ -76,3 +79,15 @@
 > Memory Usage: 36 MB, less than 82.22% of Java online submissions for Largest Number.
 >
 
+```
+    Collections.sort(list, new Comparator<String>(){
+        @Override
+        public int compare(String str1, String str2){
+            String s1 = str1 + str2;
+            String s2 = str2 + str1;
+            return s2.compareTo(s1); // reverse order here, so we can do append() later
+        }
+    });
+```
+> Runtime: 4 ms, faster than 93.81% of Java online submissions for Largest Number.
+> Memory Usage: 36.2 MB, less than 82.22% of Java online submissions for Largest Number.
