--- a/src/leetcode/markdown/297. Serialize and Deserialize Binary Tree.md
+++ b/src/leetcode/markdown/297. Serialize and Deserialize Binary Tree.md
@@ -151,7 +151,8 @@ public class SerializeandDeserializeBinaryTree {
         return treeNode;
     }
 ```
->网上其他大神的答案
+>网上其他大神的答案,按照中序遍历所有的节点，初始化左右节点直到遇到都是null停止。
+>解码的时候类似，直接按照中序读，把左子树搞完搞右子树。
 ```
 The idea is simple: print the tree in pre-order traversal and use "X" to denote null node and split node with ",". We can use a StringBuilder for building the string on the fly. For deserializing, we use a Queue to store the pre-order traversal and since we have "X" as null node, we know exactly how to where to end building subtress.
 
