--- a/src/leetcode/markdown/321. Create Maximum Number.md
+++ b/src/leetcode/markdown/321. Create Maximum Number.md
@@ -31,7 +31,7 @@ Output:
 [9, 8, 9]
 ```
 >
-> 我的思路永远都会超时。。。
+> 我的思路永远都会超时。。。这是唯一一条我看答案也看不懂的
 > 得到两个数组在一下个数的最大值，如果相等，则分别迭代看最后哪个得到的最大。
 ```
  package leetcode.hard;
