--- a/src/leetcode/markdown2/332. Reconstruct Itinerary.md
+++ b/src/leetcode/markdown2/332. Reconstruct Itinerary.md
@@ -66,7 +66,7 @@ Explanation: Another possible reconstruction is ["JFK","SFO","ATL","JFK","ATL","
              return res;
          }
 ```
-> 瞅瞅人家的dfs，根本不用关心那么多。。。
+> 瞅瞅人家的dfs，根本不用关心那么多。。。欧拉回路，一笔画
 ```java
 public class Solution {
     Map<String, Queue<String>> flights;
