--- a/src/leetcode/markdown2/335. Self Crossing.md
+++ b/src/leetcode/markdown2/335. Self Crossing.md
@@ -1,5 +1,5 @@
 ###[335]. Self Crossing
-[Medium]
+[Hard]
 ```
 给定一个含有 n 个正数的数组 x。从点 (0,0) 开始，先向北移动 x[0] 米，然后向西移动 x[1] 米，向南移动 x[2] 米，向东移动 x[3] 米，持续移动。也就是说，每次移动后你的方位会发生逆时针变化。
 
